JAF Mail Response Added

--- a/views/admin-panel.ejs
+++ b/views/admin-panel.ejs
@@ -75,13 +75,9 @@
     <meta name="og:country-name" content="INDIA" />
     <title></title>
 
-    <link
-      rel="stylesheet"
-      href="/fontawesome-free-6.1.2-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css\page-css\admin-panel.css" />
-    
 
     <script defer type="text/javascript" src="/js/admin-panel.js"></script>
   </head>
@@ -225,6 +221,82 @@
                     </div> -->
           </div>
         </div>
+        <!-- <div class="bottom-div" style="margin-top: 2%">
+          <div class="responses">
+            <div class="response-table">
+              <div class="row" style="margin-top: 2px">
+                <div class="col">
+                  <h4>S. No.</h4>
+                </div>
+                <div class="col">
+                  <h4>Name of Organization</h4>
+                </div>
+                <div class="col">
+                  <h4>Website</h4>
+                </div>
+                <div class="col">
+                  <h4>Job Offer Type</h4>
+                </div>
+                <div class="col">
+                  <h4>Eligible Batches</h4>
+                </div>
+                <div class="col">
+                  <h4>Eligible Branches</h4>
+                </div>
+                <div class="col">
+                  <h4>Job Designation</h4>
+                </div>
+                <div class="col">
+                  <h4>CTC</h4>
+                </div>
+                <div class="col">
+                  <h4>Mode of Selection</h4>
+                </div>
+                <div class="col">
+                  <h4>Preferred Location</h4>
+                </div>
+                <div class="col">
+                  <h4>No. of Offers</h4>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <span>1</span>
+                </div>
+                <div class="col">
+                  <span>XYZ</span>
+                </div>
+                <div class="col">
+                  <a href="https://tnp.iiitbh.ac.in"></a>
+                </div>
+                <div class="col">
+                  <span>xyz</span>
+                </div>
+                <div class="col">
+                  <span>xyz</span>
+                </div>
+                <div class="col">
+                  <span>lor</span>
+                </div>
+                <div class="col">
+                  <span></span>
+                </div>
+                <div class="col">
+                  <span></span>
+                </div>
+                <div class="col">
+                  <span></span>
+                </div>
+                <div class="col">
+                  <span></span>
+                </div>
+                <div class="col">
+                  <span></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> -->
       </div>
     </section>
   </body>
