--- a/public/css/jaf.css
+++ b/public/css/jaf.css
@@ -107,17 +107,18 @@ body {
 }
 
 .job-content-1 {
-    width: 90%;
-    padding: 3%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  width: 90%;
+  padding: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.job-content-1 .heading, .job-content-1 .rules {
-    width: 90%;
-    word-wrap: break-word;
+.job-content-1 .heading,
+.job-content-1 .rules {
+  width: 90%;
+  word-wrap: break-word;
 }
 
 .form-div {
@@ -169,7 +170,8 @@ body {
   font-size: 20px;
   margin-bottom: 2vh;
 }
-.new_btn {
+.new_btn,
+.new_btn-1 {
   height: 50px;
   width: 20vh;
   margin: 10% 0;
@@ -188,6 +190,19 @@ body {
   font-weight: 300;
   transition: all 0.5s ease;
 }
+.new_btn-1 button {
+  width: 100%;
+  height: 45px;
+  border-radius: 20px;
+  border: 2px solid rgb(239, 200, 25);
+  background: rgb(255, 255, 255);
+  font-size: 18px;
+  font-family: inherit;
+  text-transform: capitalize;
+  color: rgb(239, 200, 25);
+  font-weight: 300;
+  transition: all 0.5s ease;
+}
 
 .form-group button:hover {
   cursor: pointer;
@@ -197,7 +212,15 @@ body {
 
 .new_btn button:hover {
   cursor: pointer;
-  border: 2px solid rgb(137, 112, 0);
+  border: 2px solid rgb(239, 200, 25);
+  background: rgb(255, 255, 255);
+  color: rgb(239, 200, 25); 
+}
+.new_btn-1 button:hover {
+  cursor: pointer;
+  border: none;
+  background: rgb(239, 200, 25);
+  color: #fff;
 }
 fieldset {
   border: none;
