Update JAF FORM

--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -66,17 +66,6 @@
             <div class="bottom">
               <ul>
                 <li>
-                  Companies are contacted by the Placement office or Placement
-                  cell (authorized student representatives) and invitations are
-                  extended, providing relevant information and the placement
-                  brochure.
-                </li>
-                <li>
-                  Companies are given an exclusive login id in the website after
-                  they submit the filled-in job announcement forms (JAF) via
-                  email.
-                </li>
-                <li>
                   The JAFs are made available online, which helps the willing
                   students to register for the same.
                 </li>
@@ -575,7 +564,7 @@
                       <option value="IIIT Bhagalpur Campus">
                         IIIT Bhagalpur Campus
                       </option>
-                      <option value="Online">Online/Remote</option>
+                      <option value="Online">Online</option>
                     </select>
                   </div>
                   <div class="form-group">
