--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -47,7 +47,7 @@
         <div class="banner">
           <img src="\assets\jaf-banner.png" alt="JAF - Job Announcement Form" />
         </div>
-        <div class="job-container">
+        <!-- <div class="job-container">
           <div class="instruction">
             <h1>1. Instructions</h1>
           </div>
@@ -114,7 +114,7 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="job-content-2">
           <div class="form-container">
             <div class="heading">
